--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,12 @@ label{
 .hide{
   display: none!important;
 }
+h1,h2,h3,h4,h5,h6{
+  font-weight: 600!important;
+}
+.table td{
+  vertical-align: middle!important;
+}
 
 .title{
   font-size: 1.8rem;
