--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   margin: 0;
   padding: 0;
   font-family: 'Nanum Gothic', sans-serif;
+  color: black;
+}
+svg path{
+  fill: white;
+}
+a{
+  color: inherit!important;
 }
 a:hover{
   text-decoration: none!important;
@@ -106,11 +113,16 @@ h1,h2,h3,h4,h5,h6{
 .guide-small{
   max-width: 500px;
 }
-
+.padding-normal{
+  padding: 16px;
+}
 .blank{
   display: inline-block;
   width: 10%;
   height: 100%;
+}
+.lefting{
+  text-align: left;
 }
 .centering{
   text-align: center;
@@ -130,6 +142,31 @@ h1,h2,h3,h4,h5,h6{
   display: none!important;
 }
 
+.flexBox{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  width: 100%;
+}
+.flexBox> div{
+  border-radius: 4px;
+  border: 1px solid #00000033;
+  width: calc(50% - 16px);
+  margin: 8px 0;
+  padding: 16px;
+}
+.border-box{
+  border-radius: 4px;
+  border: 1px solid #00000033;
+  padding: 16px;
+  margin: 8px 0;
+}
+
+table.noHead tr> td:nth-child(1){
+  font-weight: 700;
+}
 @media(max-width: 500px){
   .mobile{
     display: initial!important;
@@ -140,5 +177,9 @@ h1,h2,h3,h4,h5,h6{
   .guideLine{
     padding: 32px 8px;
     width: 100%;
+  }
+
+  .flexBox> div{
+    width: calc(100% - 16px);
   }
 }
